Add owner mapping and security enhancements to entities
This commit introduces owner mapping for IMEI and journey entities by associating them with a `User`. Mapper methods and DTOs have been updated to reflect owner information. Security enhancements include JWT-based authorization in controller tests and configurable token expiry, ensuring data access and API calls respect ownership and authentication constraints.